<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="8dp">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingEnd="8dp"
          android:paddingRight="8dp"
          android:text="@string/label_priority" />

        <Spinner
          android:id="@+id/priority"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/dates"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingEnd="8dp"
          android:paddingRight="8dp" />

        <ImageButton
          android:id="@+id/date_picker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/label_pick_trip_date_range"
          android:src="@drawable/ic_event_white_24dp" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

  <LinearLayout
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/save"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/label_save" />

    <Button
      android:id="@+id/cancel"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/label_cancel" />
  </LinearLayout>
</LinearLayout>